Fixed z-index of main-page

--- a/the-wandering-house/src/components/main-page/main-page.css
+++ b/the-wandering-house/src/components/main-page/main-page.css
@@ -5,6 +5,7 @@
     left: 0;
     right: 0;
     background:black;
+    z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
